--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -8,3 +8,12 @@
   background-size: cover;
   min-height: 700px;
 }
+
+#splash {
+  margin-top: 100px;
+  background-color: white;
+  opacity: .7;
+  border: 2px solid white;
+  border-radius: 10px;
+  height: 350px;
+}
