--- a/public/css/translators.scss
+++ b/public/css/translators.scss
@@ -51,6 +51,10 @@
 
 }
 
+.languages, .specialties {
+  overflow: scroll;
+}
+
 hr {
   margin: 3px;
 }
